--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/AutorizarControlling.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/AutorizarControlling.cshtml
@@ -397,8 +397,8 @@
                                             Importe
                                         </th>
                                         @*<th>
-                                                Descuento
-                                            </th>*@
+                            Descuento
+                        </th>*@
                                         <th>
                                             % IVA
                                         </th>
@@ -418,8 +418,8 @@
                                             Total IEPS
                                         </th>
                                         @*<th>
-                                                Total Translados
-                                            </th>*@
+                            Total Translados
+                        </th>*@
                                         <th>
                                             Total Retenciones
                                         </th>
@@ -678,7 +678,112 @@
                             </div>
                             <div class="ln_solid"></div>
                         }
+                        <div class="form-group row">
+                            <span style="color:black"><b>MOVIMIENTOS</b></span>
+                        </div>
 
+                        <div class="form-group row">
+                            <!-- Solicitante -->
+                            @Html.LabelFor(model => model.id_solicitante, new { @class = "control-label col-md-1" })
+                            <input type="text" class="form-control col-md-5" value="@Html.DisplayFor(model => model.empleados5.ConcatNombre)" readonly>
+                            <!-- Fecha validadcion -->
+                            @Html.LabelFor(model => model.GV_comprobacion.fecha_comprobacion, new { @class = "control-label col-md-2 float-right" })
+                            <div class="col-md-4">
+                                <input type="text" class="form-control col-md-12" value="@(Model.GV_comprobacion.fecha_comprobacion.HasValue ? Model.GV_comprobacion.fecha_comprobacion.Value.ToString() : "NO DISPONIBLE" )" readonly>
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- JEFE DIRECTO -->
+                            @Html.LabelFor(model => model.GV_comprobacion.id_jefe_directo, new { @class = "control-label col-md-1" })
+                            <input type="text" class="form-control col-md-5" value="@Html.DisplayFor(model => model.GV_comprobacion.empleados2.ConcatNombre)" readonly>
+
+                            <!-- Fecha validacion -->
+                            @Html.LabelFor(model => model.GV_comprobacion.fecha_aceptacion_jefe_area, new { @class = "control-label col-md-2 float-right" })
+
+                            <div class="col-md-4">
+                                @if (Model.GV_comprobacion.fecha_aceptacion_jefe_area.HasValue)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="@Model.GV_comprobacion.fecha_aceptacion_jefe_area.Value" readonly>
+                                }
+                                else if (Model.GV_comprobacion.estatus == Bitacoras.Util.GV_comprobacion_estatus.RECHAZADO_JEFE)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
+                                }
+                                else
+                                {
+                                    <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
+                                }
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- CONTROLLING -->
+                            @Html.LabelFor(model => model.GV_comprobacion.id_controlling, new { @class = "control-label col-md-1" })
+                            <input type="text" class="form-control col-md-5" value="@Html.DisplayFor(model => model.GV_comprobacion.empleados1.ConcatNombre)" readonly>
+
+                            <!-- Fecha validacion -->
+                            @Html.LabelFor(model => model.GV_comprobacion.fecha_aceptacion_controlling, new { @class = "control-label col-md-2 float-right" })
+
+                            <div class="col-md-4">
+                                @if (Model.GV_comprobacion.fecha_aceptacion_controlling.HasValue)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="@Model.GV_comprobacion.fecha_aceptacion_controlling.Value" readonly>
+                                }
+                                else if (Model.GV_comprobacion.id_controlling.HasValue && Model.GV_comprobacion.estatus == Bitacoras.Util.GV_comprobacion_estatus.RECHAZADO_CONTROLLING)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
+                                }
+                                else
+                                {
+                                    <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
+                                }
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- CONTABILIDAD -->
+                            @Html.LabelFor(model => model.GV_comprobacion.id_contabilidad, new { @class = "control-label col-md-1" })
+                            <input type="text" class="form-control col-md-5" value="@Html.DisplayFor(model => model.GV_comprobacion.empleados.ConcatNombre)" readonly>
+
+                            <!-- Fecha validacion -->
+                            @Html.LabelFor(model => model.GV_comprobacion.fecha_aceptacion_contabilidad, new { @class = "control-label col-md-2 float-right" })
+                            <div class="col-md-4">
+                                @if (Model.GV_comprobacion.fecha_aceptacion_contabilidad.HasValue)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="@Model.GV_comprobacion.fecha_aceptacion_contabilidad.Value" readonly>
+                                }
+                                else if (Model.GV_comprobacion.id_contabilidad.HasValue && Model.GV_comprobacion.estatus == Bitacoras.Util.GV_comprobacion_estatus.RECHAZADO_CONTABILIDAD)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
+                                }
+                                else
+                                {
+                                    <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
+                                }
+                            </div>
+                        </div>
+                        <div class="form-group row">
+                            <!-- NOMINA -->
+                            @Html.LabelFor(model => model.GV_comprobacion.id_nomina, new { @class = "control-label col-md-1" })
+                            <input type="text" class="form-control col-md-5" value="@Html.DisplayFor(model => model.GV_comprobacion.empleados3.ConcatNombre)" readonly>
+
+                            <!-- Fecha validacion -->
+                            @Html.LabelFor(model => model.GV_comprobacion.fecha_aceptacion_nomina, new { @class = "control-label col-md-2 float-right" })
+                            <div class="col-md-4">
+                                @if (Model.GV_comprobacion.fecha_aceptacion_nomina.HasValue)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="@Model.GV_comprobacion.fecha_aceptacion_nomina.Value" readonly>
+                                }
+                                else if (Model.GV_comprobacion.id_nomina.HasValue && Model.GV_comprobacion.estatus == Bitacoras.Util.GV_comprobacion_estatus.RECHAZADO_NOMINA)
+                                {
+                                    <input type="text" class="form-control col-md-12" value="RECHAZADO" readonly>
+                                }
+                                else
+                                {
+                                    <input type="text" class="form-control col-md-12" value="NO DISPONIBLE" readonly>
+                                }
+                            </div>
+                        </div>
+
+                        <div class="ln_solid"></div>
                         <div class="col-md-12">
                             <div class="item form-group">
                                 <div class="col-md-6 col-sm-6 ">
