--- a/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/Edit.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/ComprobacionGV/Edit.cshtml
@@ -938,7 +938,7 @@
                             <div class="ln_solid"></div>
                             <div class="form-group row">
                             <span style="color:black"><b>MOVIMIENTOS</b></span>
-                        </div>
+                            </div>
 
                         <div class="form-group row">
                             <!-- Solicitante -->
@@ -1238,7 +1238,7 @@ function asignaEventosInput() {
     //agrega evento para calculo de gasto extranjero
     $(".concepto-extranjero").each(function () {
 
-        $(this).on('input', function (e) {
+        $(this).on('keyup change blur', function (e) {
             let row = $(this).attr("data-row");
             let tipoCambio = document.getElementById("GV_comprobacion_rel_gastos[" + row + "].tipo_cambio").value;
             let importe = document.getElementById("GV_comprobacion_rel_gastos[" + row + "].importe").value;
@@ -1774,7 +1774,7 @@ function borrarConcepto(uuid) {
 
 
     $('.div_' + uuid).each(function (index) {
-        $(this).fadeOut(300, function () {
+        $(this).fadeOut(0, function () {
             $(this).remove();
         });
     });
