--- a/CódigoFuente/BitacorasProduccion/Views/GV_solicitud/Solicitudes.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/GV_solicitud/Solicitudes.cshtml
@@ -151,6 +151,12 @@
                                                         <th>
                                                             @Html.DisplayNameFor(model => model.id_contabilidad)
                                                         </th>
+                                                    }                                                   
+                                                    @if (action_result == "AUTORIZACIONES")
+                                                    {
+                                                        <th>
+                                                            @Html.DisplayNameFor(model => model.id_jefe_directo)
+                                                        </th>
                                                     }
                                                     <th>
                                                         @Html.DisplayNameFor(model => model.origen)
@@ -204,6 +210,12 @@
                                                                 @Html.DisplayFor(modelItem => item.empleados.ConcatNombre)
                                                             </td>
                                                         }
+                                                        @if (action_result == "AUTORIZACIONES")
+                                                        {
+                                                            <td>
+                                                                <b>@Html.DisplayFor(modelItem => item.empleados3.ConcatNombre)</b>
+                                                            </td>
+                                                        }
                                                         <td>
                                                             @Html.DisplayFor(modelItem => item.origen)
                                                         </td>
@@ -246,6 +258,13 @@
                                                             {
 
                                                                 <a href="@Url.Action("AutorizarJefeDirecto", ViewBag.ControllerName, new { id = item.id, s_estatus = estatus })" class="btn btn-success " title="Autorizar/Rechazar">
+                                                                    <i class="fa-regular fa-circle-check"></i>
+                                                                </a>
+                                                            }
+
+                                                            @if ((User.IsInRole(TipoRoles.GV_AUTORIZACION) && action_result == "AUTORIZACIONES" && item.estatus == Bitacoras.Util.GV_solicitud_estatus.ENVIADO_A_JEFE))
+                                                            {
+                                                                <a onclick="muestraModal('@item.empleados3.ConcatNombre', '@item.id')" class="btn btn-success " title="Autorizar/Rechazar" style="color:white">
                                                                     <i class="fa-regular fa-circle-check"></i>
                                                                 </a>
                                                             }
@@ -318,7 +337,7 @@
 @section scripts
 {
     <!-- SweetAlert2 -->
-    @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2.min.js"))
+    @Scripts.Render(Url.Content("~/Content/vendors/sweetalert2/sweetalert2@11.js"))
     @Scripts.Render(Url.Content("~/Scripts/AlertasSweetAlert.js"))
     @Scripts.Render(Url.Content("~/Content/vendors/select2/js/select2.full.min.js"))
     @Scripts.Render("~/bundles/dataTables_js")
@@ -349,7 +368,21 @@
 
         });
 
-
+        function muestraModal(nombre, id) {
+            Swal.fire({
+                icon: 'warning',
+                html: 'Se mostrará el formulario para autorizar una solicitud asignada a: '+nombre+'.<br>¿Desea continuar?',
+                showDenyButton: true,
+                denyButtonText: 'Cancelar',
+                confirmButtonText: 'Continuar'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    window.location.href = "AutorizarJefeDirecto/"+id+"?s_estatus=Autorizacion";
+                } else if (result.isDenied) {
+                   //do nothing
+                }
+            })
+        }
 
         //agranda el tamaño de la barra
         window.onload = function () {
